# bencode-parser-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request
examples/: cli.rs  info_hash_extractor.rs  info_hash_generator.rs  magnet_link.rs  piece_hash_extractor.rs
src/: Hello.txt  bencode.rs  lib.rs  main.rs  options.rs
